--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/TgCatUB/catuserbot",
+  "repository": "https://github.com/massom0097773/catuserbot",
   "website": "#TODO",
   "success_url": "#TODO",
   "env": {
